# testing

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  flake.nix  parcel.yml
.github/workflows/: ci.yml  create-release.yml  release.yml
src/: cli.rs  config.rs  main.rs  utils.rs
