[package]
name = "kozutsumi"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
config = { version = "0.15.15", features = ["yaml"], default-features = false }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"], optional = true }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = { version = "1.0.144", optional = true }
shellexpand = "3.1.1"
url = { version = "2.5.7", features = ["serde"] }

[features]
default = ["json", "dialog"]
json = ["dep:serde_json"]
dialog = ["dep:dialoguer"]
