[package]
name = "kozutsumi"
version = "0.1.1"
edition = "2024"
description = "A single tool for opening groups of applications, files, folders, and URLs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
config = { version = "0.15.16", features = ["yaml"], default-features = false }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"], optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
shellexpand = "3.1.1"
url = { version = "2.5.7", features = ["serde"] }

[features]
default = []
json = ["dep:serde_json"]
dialog = ["dep:dialoguer"]
